set icon width to fix text alignment

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -44,4 +44,5 @@
 .menu-icon {
     color: #D04A36;
     padding: 35px 40px 25px 20px;
+    width: 48px;
 }
